app/styles/main.scss
 // Bourbon & Neat
@import '../../bower_components/bourbon/dist/bourbon';
@import '../../bower_components/neat/app/assets/stylesheets/neat';

// Custom Styles

$containerBorder: 1px solid grey;
$containerPadding: 8px;


header{
  font-size:30px;
  width:285px;
  float:left;
  margin-top:30px;
}

.animate{
  width:10px;
  font-size:40px;
  display:inline-block;
  margin-top:26px;


    -webkit-animation-name: blinker;
    -webkit-animation-duration: 1s;
    -webkit-animation-timing-function: linear;
    -webkit-animation-iteration-count: infinite;

    -moz-animation-name: blinker;
    -moz-animation-duration: 1s;
    -moz-animation-timing-function: linear;
    -moz-animation-iteration-count: infinite;

    animation-name: blinker;
    animation-duration: 1s;
    animation-timing-function: linear;
    animation-iteration-count: infinite;
}

@-moz-keyframes blinker {  
    0% { opacity: 1.0; }
    50% { opacity: 0.0; }
    100% { opacity: 1.0; }
}

@-webkit-keyframes blinker {  
    0% { opacity: 1.0; }
    50% { opacity: 0.0; }
    100% { opacity: 1.0; }
}

@keyframes blinker {  
    0% { opacity: 1.0; }
    50% { opacity: 0.0; }
    100% { opacity: 1.0; }
}

.container {
  @include span-columns(8);
  margin-left:100px;
  clear:both;
}

.title-container{
  @include span-columns(5);
  float:left;
  margin-top:70px;
  font-size:20px;
  padding:5px;
  border:$containerBorder
}

.author-container{
  @include span-columns(2);
  float:right;
  margin-top:100px;
  font-size:15px;
  padding:$containerPadding;
  padding-top:5px;
  border:$containerBorder;
  margin-right:0px;
  text-align:right;  

}

.create-post-container{
  @include span-columns(12);
  margin-top:20px;
  height:175px;
  float:left;
  padding:$containerPadding;
  border:$containerBorder;
}

.tag-container{
  @include span-columns(4);
  margin-top:20px;
  font-size:11px;
  float:left;
  padding:$containerPadding;
  border:$containerBorder;
}

*:focus {
    outline: none;
}

.submit{
  float:right;
  margin-top:60px;
  padding:15px;
  background-color:white;
  color:black;
  border:3px dotted #009999;
}

.published-container{
  @include span-columns(12);
  margin-top:30px;
  padding:$containerPadding;
  padding-top:15px;
  float:left;
  border-top:$containerBorder;
}

